Changelog for plone.reload
==========================

    (name of developer listed in brackets)

0.3 Unreleased
--------------


0.2 Released January 25, 2008
-----------------------------

    - Added compatibility with Zope 2.10 / Plone 3.0.
      [hannosch]

0.1 Released January 25, 2008
-----------------------------

    - Initial implementation based heavily on Products.RefreshNG.
      [hannosch]

    - Initial package structure.
      [zopeskel]
